[package]
name = "clayton-os"
version = "0.1.0"
edition = "2021"

# for cargo build 
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# for cargo build --release
[profile.release]
panic = "abort" 

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
